<resources>
    <string name="app_name">Planetze</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="q1">1. Do you own or regularly use a car?</string>
    <string name="q2">2. What type of car do you drive?</string>
    <string name="q3">3. How many kilometers/miles do you drive per year?</string>
    <string name="q4">4. How often do you use public transportation (bus, train, subway)?</string>
    <string name="q5">5. How much time do you spend on public transport per week (bus, train, subway)?</string>
    <string name="q6">6. How many short-haul flights (less than 1,500 km / 932 miles) have you taken in the past year?</string>
    <string name="q7">7. How many long-haul flights (less than 1,500 km / 932 miles) have you taken in the past year?</string>
    <string name="q8">8. What best describes your diet?</string>
    <string name="q9">9. How often do you eat the following animal-based products?</string>
    <string name="q10">10. How often do you waste food or throw away uneaten leftovers?</string>
    <string name="q11">11. What type of home do you live in?</string>
    <string name="q12">12. How many people live in your household?</string>
    <string name="q13">13. What is the size of your home?</string>
    <string name="q14">14. What type of energy do you use to heat your home?</string>
    <string name="q15">15. What is your average monthly electricity bill?</string>
    <string name="q16">16. What type of energy do you use to heat water in your home?</string>
    <string name="q17">17. Do you use any renewable energy sources for electricity or heating (e.g., solar, wind)?</string>
    <string name="q18">18. How often do you buy new clothes?</string>
    <string name="q19">19. Do you buy second-hand or eco-friendly products?</string>
    <string name="q20">20. How many electronic devices (phones, laptops, etc.) have you purchased in the past year?</string>
    <string name="q21">21. How often do you recycle?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="hybrid">Hybrid</string>
    <string name="electric">Electric</string>
    <string name="dist1">Up to 5,000 km\n(3,000 miles)</string>
    <string name="dist2">5,000–10,000 km\n(3,000–6,000 miles)</string>
    <string name="dist3">10,000–15,000 km\n(6,000–9,000 miles)</string>
    <string name="dist4">15,000–20,000 km\n(9,000–12,000 miles)</string>
    <string name="dist5">20,000–25,000 km\n(12,000–15,000 miles</string>
    <string name="dist6">More than 25,000 km\n(15,000 miles)</string>
    <string name="dunno">I don\'t know</string>
    <string name="never">Never</string>
    <string name="occasionally">Occasionally (1–2 times/week)</string>
    <string name="frequently">Frequently (3–4 times/week)</string>
    <string name="always">Always (5+ times/week)</string>
    <string name="time1">Under 1 hour</string>
    <string name="time2">1–3 hours</string>
    <string name="time3">3–5 hours</string>
    <string name="time4">5–10 hours</string>
    <string name="time5">More than 10 hours</string>
    <string name="none">None</string>
    <string name="flights1">1–2 flights</string>
    <string name="flights2">3–5 flights</string>
    <string name="flights3">6–10 flights</string>
    <string name="flights4">More than 10 flights</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescatarian">Pescatarian (fish/seafood)</string>
    <string name="meat_based">Meat-based\n(eat all types of animal products)</string>
    <string name="beef">Beef:</string>
    <string name="pork">Pork:</string>
    <string name="chicken">Chicken:</string>
    <string name="fish">Fish/Seafood:</string>
    <string name="daily">Daily</string>
    <string name="rarely">Rarely</string>
    <string name="occasion">Occasionally</string>
    <string name="frequent">Frequently</string>
    <string name="detached">Detached house</string>
    <string name="semi_detached">Semi-detached house</string>
    <string name="townhouse">Townhouse</string>
    <string name="condo">Condo/Apartment</string>
    <string name="other">Other</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3_4">3–4</string>
    <string name="_5_or_more">5 or more</string>
    <string name="under_1000_sq_ft">Under 1000 sq. ft.</string>
    <string name="_1000_2000_sq_ft">1000–2000 sq. ft.</string>
    <string name="over_2000_sq_ft">Over 2000 sq. ft.</string>
    <string name="natural_gas">Natural Gas</string>
    <string name="electricity">Electricity</string>
    <string name="oil">Oil</string>
    <string name="propane">Propane</string>
    <string name="wood">Wood</string>
    <string name="bill1">Under $50</string>
    <string name="bill2">$50-$100</string>
    <string name="bill3">$100-$150</string>
    <string name="bill4">$150-$200</string>
    <string name="bill5">Over $200</string>
    <string name="primarily">Yes, primarily (more than 50% of energy use)</string>
    <string name="partially">Yes, partially (less than 50% of energy use)</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="annually">Annually</string>
    <string name="yes_regularly">Yes, regularly</string>
    <string name="yes_occasionally">Yes, occasionally</string>
    <string name="_3_or_more">3 or more</string>
    <string name="alway">Always</string>
    <string name="location">Please specify your current location</string>
    <string name="country">Country</string>
    <string name="daily_co2e_emissions">Daily CO2e Emissions</string>
    <string name="total_co2e_emissions">Total CO2e Emissions</string>
    <string name="transportation">Transportation Activities</string>
    <string name="drive_personal_vehicle">Drive Personal Vehicle</string>
    <string name="take_public_transportation">Take Public Transportation</string>
    <string name="cycling_or_walking">Cycling or Walking</string>
    <string name="flight">Flight (Short-Haul or Long-Haul)</string>
    <string name="food">Food Consumption Activities</string>
    <string name="meal">Meal</string>
    <string name="consumption">Consumption and Shopping Activities</string>
    <string name="buy_new_clothes">Buy New Clothes</string>
    <string name="buy_electronics">Buy Electronics</string>
    <string name="other_purchases">Other Purchases</string>
    <string name="energy_bills">Energy Bills</string>
    <string name="distance_driven_in_km">Distance driven in km</string>
    <string name="type_of_public_transportation">Type of public transportation</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="time_spent_on_public_transportation">Time spent on public transportation</string>
    <string name="time_spend_in_hours">Time spend in hours</string>
    <string name="distance_driven">Distance driven</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="subway">Subway</string>
    <string name="distance_cycled_or_walked">Distance cycled or walked</string>
    <string name="distance_in_km">Distance in km</string>
    <string name="number_of_flights_taken_today">Number of flights taken today</string>
    <string name="number_of_flights">Number of flights</string>
    <string name="type_of_flight">Type of flight</string>
    <string name="short_haul"><![CDATA[Short-haul (<1,500 km)]]></string>
    <string name="long_haul"><![CDATA[Long-haul (>1,500 km)]]></string>
    <string name="type_of_meal">Type of meal</string>
    <string name="beef2">Beef</string>
    <string name="pork2">Pork</string>
    <string name="chicken2">Chicken</string>
    <string name="fish2">Fish</string>
    <string name="plant_based">Plant-based</string>
    <string name="number_of_servings_consumed">Number of servings consumed</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="number_of_clothing_items_purchased">Number of clothing items purchased</string>
    <string name="number_of_clothes">Number of clothes</string>
    <string name="type_of_electronic_device">Type of electronic device</string>
    <string name="number_of_devices_purchased">Number of devices purchased</string>
    <string name="type_of_purchase">Type of purchase</string>
    <string name="number_of_the_purchases">Number of the purchases</string>
    <string name="type_of_bill">Type of bill</string>
    <string name="gas">Gas</string>
    <string name="water">Water</string>
    <string name="specific_bill_amount">Specific bill amount</string>
    <string name="transport">Transportation</string>
    <string name="food_consumption">Food Consumption</string>
    <string name="consumption_and_shopping">Consumption and Shopping</string>
    <string name="google_pay_status_unavailable">Google Pay Unavailable</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="habit_completion_message">You have completed %1$d times during the past week</string>
    <string name="habit_completion_confirmation">I have done this habit for the day</string>
    <string name="carbon_info_heading_1">What is Carbon Footprint</string>
    <string name="carbon_info_heading_2">Why Carbon Footprints Matter</string>
    <string name="carbon_info_heading_3">Conclusion</string>
    <string name="carbon_info_heading_4">What\'s Next?</string>
    <string name="carbon_info_sub_1">1. Climate Change</string>
    <string name="carbon_info_sub_2">2. Health Impacts</string>
    <string name="carbon_info_sub_3">3. Economic Strain</string>
    <string name="carbon_info_sub_4">4. Social Inequality</string>
    <string name="carbon_info_text_1">Carbon footprint is the total amount of greenhouse gases, especially carbon dioxide (CO₂), emitted directly or indirectly by one\'s activities. These emissions contribute to climate change and are measured in tons of CO₂ equivalents.</string>
    <string name="carbon_info_text_2">Greenhouse gases trap heat in the atmosphere, causing global warming, extreme weather events and also lead to environmental degradation such as rising sea levels, habitat loss.</string>
    <string name="carbon_info_text_3">Emissions from fossil fuels release pollutants harmful to health, causing respiratory and cardiovascular issues.</string>
    <string name="carbon_info_text_4">Climate-related disasters burden global economies, especially in regions less able to recover.</string>
    <string name="carbon_info_text_5">Vulnerable communities face the harshest impacts of climate change.</string>
    <string name="carbon_info_text_6">By making sustainable choices like using renewable energy, reducing waste, and supporting environmental policies, you can play a crucial role in combating climate change and creating a healthier, more sustainable future for everyone.</string>
    <string name="carbon_info_text_7">You\'re about to fill a one-time questionnaires to calculate your annual carbon footprints.</string>
    <string name="get_started">Get Started</string>
    <string name="add_activity">Add Activity</string>
</resources>