<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/FormContainer">

            <LinearLayout style="@style/FormBox">

                <TextView
                    android:id="@+id/q18"
                    style="@style/FormQuestion"
                    android:text="@string/q18" />

                <View style="@style/FormLine" />

                <Button
                    android:id="@+id/q18_option1"
                    style="@style/FormOption"
                    android:text="@string/monthly" />

                <Button
                    android:id="@+id/q18_option2"
                    style="@style/FormOption"
                    android:text="@string/quarterly" />

                <Button
                    android:id="@+id/q18_option3"
                    style="@style/FormOption"
                    android:text="@string/annually" />

                <Button
                    android:id="@+id/q18_option4"
                    style="@style/FormOption"
                    android:text="@string/rarely" />

            </LinearLayout>

            <LinearLayout style="@style/FormBox">

                <TextView
                    android:id="@+id/q19"
                    style="@style/FormQuestion"
                    android:text="@string/q19" />

                <View style="@style/FormLine" />

                <Button
                    android:id="@+id/q19_option1"
                    style="@style/FormOption"
                    android:text="@string/yes_regularly" />

                <Button
                    android:id="@+id/q19_option2"
                    style="@style/FormOption"
                    android:text="@string/yes_occasionally" />

                <Button
                    android:id="@+id/q19_option3"
                    style="@style/FormOption"
                    android:text="@string/no" />

            </LinearLayout>

            <LinearLayout style="@style/FormBox">

                <TextView
                    android:id="@+id/q20"
                    style="@style/FormQuestion"
                    android:text="@string/q20" />

                <View style="@style/FormLine" />

                <Button
                    android:id="@+id/q20_option1"
                    style="@style/FormOption"
                    android:text="@string/none" />

                <Button
                    android:id="@+id/q20_option2"
                    style="@style/FormOption"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/q20_option3"
                    style="@style/FormOption"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/q20_option4"
                    style="@style/FormOption"
                    android:text="@string/_3_or_more" />

            </LinearLayout>

            <LinearLayout style="@style/FormBox">

                <TextView
                    android:id="@+id/q21"
                    style="@style/FormQuestion"
                    android:text="@string/q21" />

                <View style="@style/FormLine" />

                <Button
                    android:id="@+id/q21_option1"
                    style="@style/FormOption"
                    android:text="@string/never"/>

                <Button
                    android:id="@+id/q21_option2"
                    style="@style/FormOption"
                    android:text="@string/occasion"/>

                <Button
                    android:id="@+id/q21_option3"
                    style="@style/FormOption"
                    android:text="@string/frequent"/>

                <Button
                    android:id="@+id/q21_option4"
                    style="@style/FormOption"
                    android:text="@string/alway"/>

            </LinearLayout>

            <LinearLayout style="@style/FormNav">

                <Button
                    android:id="@+id/back"
                    style="@style/FormButton"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/next"
                    style="@style/FormButton"
                    android:text="@string/next" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>