<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentColor"
    tools:context=".ui.form.CarbonInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/InfoHeading1"
                android:text="@string/carbon_info_heading_1" />

            <TextView
                style="@style/InfoText"
                android:text="@string/carbon_info_text_1" />

            <TextView
                style="@style/InfoHeading1"
                android:text="@string/carbon_info_heading_2" />

            <TextView
                style="@style/InfoSubheading"
                android:text="@string/carbon_info_sub_1" />

            <androidx.cardview.widget.CardView style="@style/InfoCardView">

                <ImageView
                    style="@style/InfoImage"
                    android:src="@drawable/planetze_whatisclimatechange" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/InfoText"

                android:layout_marginBottom="16dp"
                android:text="@string/carbon_info_text_2" />

            <TextView
                style="@style/InfoSubheading"
                android:text="@string/carbon_info_sub_2" />

            <androidx.cardview.widget.CardView style="@style/InfoCardView">

                <ImageView
                    style="@style/InfoImage"
                    android:src="@drawable/planetze_healthimpact" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/InfoText"
                android:layout_marginBottom="16dp"
                android:text="@string/carbon_info_text_3" />

            <TextView
                style="@style/InfoSubheading"
                android:text="@string/carbon_info_sub_3" />

            <androidx.cardview.widget.CardView style="@style/InfoCardView">

                <ImageView
                    style="@style/InfoImage"
                    android:src="@drawable/planetze_economic" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/InfoText"
                android:layout_marginBottom="16dp"
                android:text="@string/carbon_info_text_4" />

            <TextView
                style="@style/InfoSubheading"
                android:text="@string/carbon_info_sub_4" />

            <androidx.cardview.widget.CardView style="@style/InfoCardView">

                <ImageView
                    style="@style/InfoImage"
                    android:src="@drawable/planetze_socialinequality" />
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/InfoText"
                android:text="@string/carbon_info_text_5" />

            <TextView
                style="@style/InfoHeading1"
                android:text="@string/carbon_info_heading_3" />

            <TextView
                style="@style/InfoText"
                android:text="@string/carbon_info_text_6" />

            <TextView
                style="@style/InfoHeading1"
                android:text="@string/carbon_info_heading_4" />

            <TextView
                style="@style/InfoText"
                android:text="@string/carbon_info_text_7" />

            <Button
                android:id="@+id/buttonAcknowledge"
                style="@style/FormButton"
                android:text="@string/get_started" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
